-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0
-
-
d4d96c375df5e697f878b15548c1abff7e35ff08
For some reason we always pass true for "autorepeat" in androidjniinput.cpp in keyDown().
This doesn't sound like the right default, but it's the same in Necessitas, so we need to find out why it was added like that.
- replaces
-
QTBUG-30802 All key press and release events are marked as AutoRepeat
-
- Closed
-