Android: don't set autorepeat to true by default

When we don't know if a key event is caused by autorepeat, then
the safest assumption is that it is not.

Task-number: QTBUG-30793
Change-Id: Iea6aba164e299f0f2c772547b45df6a49639b7e9
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>
Reviewed-by: BogDan Vatra <bogdan@kde.org>

cregit: d4d96c375df5e697f878b15548c1abff7e35ff08 https://github.com/qt/qtbase/commit/d4d96c375df5e697f878b15548c1abff7e35ff08