src/plugins/platforms/android/src/androidjniinput.cpp
@@ -1792,7 +1792,7 @@ argument_list|(
 name|unicode
 argument_list|)
 argument_list|,
-literal|true
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -1881,7 +1881,7 @@ argument_list|(
 name|unicode
 argument_list|)
 argument_list|,
-literal|true
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
